Bugfix/134 - Wrong email appearence in user's popup.  (#102)
* Having long email truncates it in the middle

* Removed hardcoded email

--- a/frontend/src/components/Header/PopupMenu/styles.module.sass
+++ b/frontend/src/components/Header/PopupMenu/styles.module.sass
@@ -37,22 +37,18 @@
       background: #e9e9e9d7
 
 .email
-  width: 100%
+  max-width: 250px
   font-weight: 300
+  font-size: 1em
   display: flex !important
+  & > *
+    width: 100%
 
-  & > div
+  &_line
     color: #121421
+    white-space: nowrap
 
-  &_prefix
-    overflow: hidden
-    text-overflow: ellipsis
-
-    &_overflowed
-      position: relative
-      left: -0.21em
 
 .no_overflow
-  max-width: 200px
   overflow: hidden
   text-overflow: ellipsis
