--- a/frontend/src/components/Header/UserElement/styles.module.sass
+++ b/frontend/src/components/Header/UserElement/styles.module.sass
@@ -17,7 +17,6 @@
   justify-content: flex-end
 
 #popup
-  max-width: 200px
   padding: 0
 
   &:before
